// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledLogoO renders correctly, landscape false 1`] = `
<div
  className="sc-bdVaJa xHRFh"
/>
`;

exports[`StyledLogoO renders correctly, landscape true 1`] = `
<div
  className="sc-bdVaJa ktNRbW"
/>
`;

exports[`StyledLogoWords renders correctly, landscape false 1`] = `
<div
  className="sc-bwzfXH dKwhYy"
/>
`;

exports[`StyledLogoWords renders correctly, landscape true 1`] = `
<div
  className="sc-bwzfXH gQmgmc"
/>
`;

exports[`StyledReactTilt renders correctly, landscape false 1`] = `
<t
  className="sc-htpNat jAURfV"
  landscape={false}
  options={
    Object {
      "max": 40,
      "mobile": false,
      "perspective": 5000,
      "position-base": "window",
      "reset": true,
      "reverse": true,
    }
  }
/>
`;

exports[`StyledReactTilt renders correctly, landscape true 1`] = `
<t
  className="sc-htpNat egoDtD"
  landscape={true}
  options={
    Object {
      "max": 40,
      "mobile": false,
      "perspective": 5000,
      "position-base": "window",
      "reset": true,
      "reverse": true,
    }
  }
/>
`;
